# nexus-agent

./: .env.example  .gitignore  CHANGELOG.md  MANIFEST.in  README.md  demo_bug.py  demo_local_qwen.py  demo_review.py  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
Programmer_Assistant/: is_prime.py
docs/: LOCAL_QWEN_AWQ_GUIDE.md  adr-001-react-loop.md
src/: __init__.py
src/agent/: core.py  memory.py  persistence.py  tools.py
src/cli/: app.py  display.py  onboarding.py  web.py
src/providers/: __init__.py  anthropic_provider.py  base.py  fallback_provider.py  gemini_provider.py  local_provider.py  openai_provider.py
src/utils/: config.py
src/web/: index.html
tests/: test_audit_fixes.py  test_local_provider.py  test_providers.py  test_tools.py  test_ux_features.py
