[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "nexus-agent"
version = "2.2.1"
description = "CLI coding agent with multi-provider LLM support and tool use"
requires-python = ">=3.11"
dependencies = [
    "typer>=0.12.0",
    "rich>=13.0.0",
    "anthropic>=0.30.0",
    "openai>=1.35.0",
    "google-genai>=0.1.0",
    "duckduckgo-search>=6.0.0",
    "python-dotenv>=1.0.0",
    "psutil>=5.9.0",
]

[project.scripts]
nexus-agent = "src.cli.app:app"
agent = "src.cli.app:app"
devmind = "src.cli.app:app"

[tool.setuptools.packages.find]
where = ["."]

[tool.pytest.ini_options]
filterwarnings = ["ignore"]

[tool.pyright]
extraPaths = ["."]
