[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "nexus-agent-ai"
version = "2.2.3"
description = "Autonomous terminal-first AI software engineering assistant with ReAct tool loops and multi-provider fallback"
readme = "README.md"
authors = [{name = "Yash Bajpai"}]
license = {text = "MIT"}
requires-python = ">=3.11"
dependencies = [
    "typer>=0.12.0",
    "rich>=13.0.0",
    "anthropic>=0.30.0",
    "openai>=1.35.0",
    "google-genai>=0.1.0",
    "duckduckgo-search>=6.0.0",
    "python-dotenv>=1.0.0",
    "psutil>=5.9.0; sys_platform == 'win32' or sys_platform == 'darwin'",
    "huggingface-hub>=0.24.0",
]

[project.optional-dependencies]
local = [
    "transformers>=4.43.0",
    "torch>=2.4.0",
    "autoawq>=0.2.6",
]

[project.scripts]
nexus-agent = "src.cli.app:app"
agent = "src.cli.app:app"

[tool.setuptools.packages.find]
where = ["."]
exclude = ["venv*", "tests*"]

[tool.pytest.ini_options]
filterwarnings = ["ignore"]

[tool.pyright]
extraPaths = ["."]

[project.urls]
Homepage = "https://github.com/Yash1bajpai/nexus-agent"
Repository = "https://github.com/Yash1bajpai/nexus-agent"
Issues = "https://github.com/Yash1bajpai/nexus-agent/issues"
